--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     labels:
       - "traefik.docker.network: traefik"
       - "traefik.frontend.rule=Host:masseydebate.com"
+      - "traefik.enable=true"
     networks:
       - traefik
     image: "docker.masseyhacks.ca/jamesxu/masseydebate-website:latest"
