--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,4 +10,8 @@ services:
       - "traefik.enable=true"
     networks:
       - traefik
+    logging:
+      driver: "fluentd"
+      options:
+        tag: website.{{.ImageName}}/{{.ID}}
     image: "${CI_REGISTRY}/${CI_PROJECT_PATH}:latest"
