--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - "traefik.enable=true"
     networks:
       - traefik
+    restart: always
     logging:
       driver: "fluentd"
       options:
