--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,5 +34,5 @@ deploy:
     - ssh-add ~/.ssh/id_rsa
     - ssh-keyscan -H $DEPLOYMENT_SERVER_IP >> ~/.ssh/known_hosts
   script:
-    - scp -r ./docker-compose.yml dockerdeploy@${DEPLOYMENT_SERVER_IP}:~/
-    - ssh dockerdeploy@$DEPLOYMENT_SERVER_IP "export CI_REGISTRY=${CI_REGISTRY}; export CI_PROJECT_PATH=${CI_PROJECT_PATH}; docker login -u ${CI_REGISTRY_USER} -p ${CI_REGISTRY_PASSWORD} ${CI_REGISTRY}; docker-compose -f docker-compose.yml stop; docker-compose -f docker-compose.yml rm masseydebate; docker pull ${CI_REGISTRY}/${CI_PROJECT_PATH}:latest; docker-compose -f docker-compose.yml up -d"
+    - "scp -r ./docker-compose.yml dockerdeploy@${DEPLOYMENT_SERVER_IP}:~/docker-compose.${CI_PROJECT_NAME}.yml"
+    - ssh dockerdeploy@$DEPLOYMENT_SERVER_IP "export CI_REGISTRY=${CI_REGISTRY}; export CI_PROJECT_PATH=${CI_PROJECT_PATH}; docker login -u ${CI_REGISTRY_USER} -p ${CI_REGISTRY_PASSWORD} ${CI_REGISTRY}; docker-compose -f docker-compose.${CI_PROJECT_NAME}.yml stop; docker-compose -f docker-compose.${CI_PROJECT_NAME}.yml rm masseydebate; docker pull ${CI_REGISTRY}/${CI_PROJECT_PATH}:latest; docker-compose -f docker-compose.${CI_PROJECT_NAME}.yml up -d"
